src/test/ui/issues/issue-24446.rs
fn main() {
    static foo: Fn() -> u32 = || -> u32 {
        //~^ ERROR the size for values of type
        0
    };
}
